# bank_app_automation

./: .gitignore  README.md  conftest.py  pyproject.toml
data/: data.py
generator/: generator.py
locators/: add_customer_page.py  add_customer_page_locators.py  bank_manager_page_locators.py  lk_page_locators.py  login_page_locators.py
pages/: add_customer_page.py  bank_main_page.py  bank_manager_page.py  base_page.py  lk_page.py
tests/: add_new_customer_test.py  bank_main_test.py  bank_manager_test.py  conftest.py  lk_page_test.py
